chore(ci): Use 'submodules: true' in checkout action
Update the `submodules` parameter from `recursive` to `true` in the `actions/checkout` step across all GitHub Actions workflows.

The value 'true' is sufficient for the project's needs and is the simpler, recommended setting for checking out submodules with this action. This change standardizes the configuration and aligns with current best practices.

--- a/.github/workflows/mac_pgo.yml
+++ b/.github/workflows/mac_pgo.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/checkout@v4
         name: Clone 🧬
         with:
-          submodules: 'recursive'
+          submodules: 'true'
 
       - name: Check Arch type
         shell: bash
