--- a/.github/workflows/linux_build.yml
+++ b/.github/workflows/linux_build.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Clone 🧬
       uses: actions/checkout@v4
       with:
-        submodules: "recursive"
+        submodules: "true"
 
     # - name: Configure sccache
     #   uses: actions/github-script@v7
