--- a/.github/workflows/mac_build.yml
+++ b/.github/workflows/mac_build.yml
@@ -67,7 +67,7 @@ jobs:
     - name: Clone 🧬
       uses: actions/checkout@v4
       with:
-        submodules: "recursive"
+        submodules: "true"
 
     - name: Download macOS SDK
       uses: actions/download-artifact@v4
