--- a/.github/workflows/mac_integration.yml
+++ b/.github/workflows/mac_integration.yml
@@ -33,7 +33,7 @@ jobs:
         - name: Clone 📥
           uses: actions/checkout@v4
           with:
-            submodules: 'recursive'
+            submodules: 'true'
 
         - name: download AArch64 build artifact 📥
           uses: actions/download-artifact@v4
