--- a/.github/workflows/update-submodule.yml
+++ b/.github/workflows/update-submodule.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v4
       with:
-        submodules: "recursive"
+        submodules: "true"
         fetch-depth: 0
         token: ${{ secrets.GITHUB_TOKEN }}
 
