--- a/.github/workflows/windows_build.yml
+++ b/.github/workflows/windows_build.yml
@@ -26,7 +26,7 @@ jobs:
     - uses: actions/checkout@v4
       name: Clone 🧬
       with:
-        submodules: "recursive"
+        submodules: "true"
 
     # - name: Configure sccache
     #   uses: actions/github-script@v7
