--- a/.github/workflows/patch-test.yml
+++ b/.github/workflows/patch-test.yml
@@ -32,6 +32,7 @@ jobs:
           with:
             repository: "Floorp-Projects/Floorp"
             ref: "main"
+            submodules: recursive
 
         - name: Download artifact
           uses: actions/download-artifact@v4
