--- a/.github/workflows/common-build.yml
+++ b/.github/workflows/common-build.yml
@@ -79,8 +79,9 @@ jobs:
   build:
     name: Build ${{ inputs.platform }}-${{ inputs.arch }}
     runs-on: ubuntu-latest
-    needs: ${{ fromJSON(inputs.platform) == 'mac' && ["download-macos-sdk"] || [] }}
-    timeout-minutes: ${{ fromJSON(inputs.platform) == 'mac' && 360 || 180 }}
+    needs: download-macos-sdk
+    if: always()
+    timeout-minutes: 360
 
     steps:
       - name: Setup Node.js
