--- a/.github/workflows/mac_integration.yml
+++ b/.github/workflows/mac_integration.yml
@@ -25,185 +25,185 @@ jobs:
   Integration:
     runs-on: macos-latest
     steps:
-        - name: Init
-          run: |
-            export RUNNER_USERDIR=`echo ~`
-            echo "RUNNER_USERDIR=$RUNNER_USERDIR" >> $GITHUB_ENV
-            
-        - name: Clone 📥
-          uses: actions/checkout@v4
-          with:
-            submodules: 'true'
+      - name: Init
+        run: |
+          export RUNNER_USERDIR=`echo ~`
+          echo "RUNNER_USERDIR=$RUNNER_USERDIR" >> $GITHUB_ENV
 
-        - name: download AArch64 build artifact 📥
-          uses: actions/download-artifact@v4
-          with:
-            name: ${{ inputs.aarch64_artifact_name }}
-            path: ./
+      - name: Clone 📥
+        uses: actions/checkout@v4
+        with:
+          submodules: "true"
 
-        - name: download x86_64 build artifact 📥
-          uses: actions/download-artifact@v4
-          with:
-            name: ${{ inputs.x86_64_artifact_name }}
-            path: ./
+      - name: download AArch64 build artifact 📥
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{ inputs.aarch64_artifact_name }}
+          path: ./
 
-        - name: Download macOS SDK
-          uses: actions/download-artifact@v4
-          with:
-            name: macos-sdk
-            path: ~/macos-sdk-artifact
+      - name: download x86_64 build artifact 📥
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{ inputs.x86_64_artifact_name }}
+          path: ./
 
-        - name: Extract macOS SDK
-          run: |
-            mkdir -p ~/macos-sdk
-            gtar -xzf ~/macos-sdk-artifact/macos_sdk.tar.gz -C ~/macos-sdk --warning=no-unknown-keyword || tar -xzf ~/macos-sdk-artifact/macos_sdk.tar.gz -C ~/macos-sdk
+      - name: Download macOS SDK
+        uses: actions/download-artifact@v4
+        with:
+          name: macos-sdk
+          path: ~/macos-sdk-artifact
 
-        - name: Extract 📦
-          run: |
-            brew install gnu-tar
-            export PATH=/usr/local/opt/gnu-tar/libexec/gnubin:$PATH
-            tar -xf ./floorp-x86_64-apple-darwin-with-pgo.tar.gz
-            tar -xf ./floorp-aarch64-apple-darwin-with-pgo.tar.gz
+      - name: Extract macOS SDK
+        run: |
+          mkdir -p ~/macos-sdk
+          gtar -xzf ~/macos-sdk-artifact/macos_sdk.tar.gz -C ~/macos-sdk --warning=no-unknown-keyword || tar -xzf ~/macos-sdk-artifact/macos_sdk.tar.gz -C ~/macos-sdk
 
-        - name: Check Branding Type
-          shell: bash
-          run: |
-            if [[ $GHA_BETA == 'true' ]]; then
-              export APP_NAME=`echo "Floorp Daylight"`
-              echo "APP_NAME=$APP_NAME" >> $GITHUB_ENV
-            else
-              export APP_NAME=`echo "Floorp"`
-              echo "APP_NAME=$APP_NAME" >> $GITHUB_ENV
-            fi
-          env:
-            GHA_BETA: ${{ inputs.beta }}
+      - name: Extract 📦
+        run: |
+          brew install gnu-tar
+          export PATH=/usr/local/opt/gnu-tar/libexec/gnubin:$PATH
+          tar -xf ./floorp-mac-x86_64-moz-artifact.tar.gz
+          tar -xf ./floorp-mac-aarch64-moz-artifact.tar.gz
 
-        - name: force install python3.12
-          continue-on-error: true
-          run: |
-            brew install python@3.12
+      - name: Check Branding Type
+        shell: bash
+        run: |
+          if [[ $GHA_BETA == 'true' ]]; then
+            export APP_NAME=`echo "Floorp Daylight"`
+            echo "APP_NAME=$APP_NAME" >> $GITHUB_ENV
+          else
+            export APP_NAME=`echo "Floorp"`
+            echo "APP_NAME=$APP_NAME" >> $GITHUB_ENV
+          fi
+        env:
+          GHA_BETA: ${{ inputs.beta }}
 
-        - name: force link python3.12
-          continue-on-error: true
-          run: |
-            # due to "Error: The `brew link` step did not complete successfully" we need to force link python3.12
-            brew link --force --overwrite python@3.12
+      - name: force install python3.12
+        continue-on-error: true
+        run: |
+          brew install python@3.12
 
-        - uses: actions/setup-python@v5
-          with:
-            python-version: '3.11'
+      - name: force link python3.12
+        continue-on-error: true
+        run: |
+          # due to "Error: The `brew link` step did not complete successfully" we need to force link python3.12
+          brew link --force --overwrite python@3.12
 
-        - name: setup environment 🌲
-          continue-on-error: true
-          env:
-            GHA_BUILD_MACHINE: ${{ matrix.runs-on }}
-            SDKROOT: ${{ env.RUNNER_USERDIR }}/macos-sdk
-            MACOS_SDK_DIR: ${{ env.RUNNER_USERDIR }}/macos-sdk
-            MOZ_SDK_DIR: ${{ env.RUNNER_USERDIR }}/macos-sdk
-          run: |
-            if [[ -n ${{ inputs.MOZ_BUILD_DATE }} ]]; then
-              export MOZ_BUILD_DATE=${{ inputs.MOZ_BUILD_DATE }}
-            fi
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
 
-            echo "ac_add_options --disable-bootstrap" >> mozconfig
+      - name: setup environment 🌲
+        continue-on-error: true
+        env:
+          GHA_BUILD_MACHINE: ${{ matrix.runs-on }}
+          SDKROOT: ${{ env.RUNNER_USERDIR }}/macos-sdk
+          MACOS_SDK_DIR: ${{ env.RUNNER_USERDIR }}/macos-sdk
+          MOZ_SDK_DIR: ${{ env.RUNNER_USERDIR }}/macos-sdk
+        run: |
+          if [[ -n ${{ inputs.MOZ_BUILD_DATE }} ]]; then
+            export MOZ_BUILD_DATE=${{ inputs.MOZ_BUILD_DATE }}
+          fi
 
-            # Add macOS SDK path
-            echo "ac_add_options --with-macos-sdk=$(echo ~)/macos-sdk" >> mozconfig
+          echo "ac_add_options --disable-bootstrap" >> mozconfig
 
-            echo 'mozconfig: **********************'
-            cat ./mozconfig
-            echo '*********************************'
+          # Add macOS SDK path
+          echo "ac_add_options --with-macos-sdk=$(echo ~)/macos-sdk" >> mozconfig
 
-            brew install gnu-tar
-            export PATH=/usr/local/opt/gnu-tar/libexec/gnubin:$PATH
-            ./mach --no-interactive bootstrap --application-choice browser
+          echo 'mozconfig: **********************'
+          cat ./mozconfig
+          echo '*********************************'
 
-            # Override mozconfig
-            echo -e "ac_add_options --enable-bootstrap" > mozconfig
-            echo "ac_add_options --with-macos-sdk=$(echo ~)/macos-sdk" >> mozconfig
+          brew install gnu-tar
+          export PATH=/usr/local/opt/gnu-tar/libexec/gnubin:$PATH
+          ./mach --no-interactive bootstrap --application-choice browser
 
-        - name: Extract .app from dmg 📦
-          run: |
-            rm -rf "./obj-x86_64-apple-darwin/dist/floorp/*.app"
-            rm -rf "./obj-aarch64-apple-darwin/dist/floorp/*.app"
+          # Override mozconfig
+          echo -e "ac_add_options --enable-bootstrap" > mozconfig
+          echo "ac_add_options --with-macos-sdk=$(echo ~)/macos-sdk" >> mozconfig
 
-            ls ./obj-x86_64-apple-darwin/dist/
+      - name: Extract .app from dmg 📦
+        run: |
+          rm -rf "./obj-x86_64-apple-darwin/dist/floorp/*.app"
+          rm -rf "./obj-aarch64-apple-darwin/dist/floorp/*.app"
 
-            hdiutil attach ./obj-x86_64-apple-darwin/dist/floorp*.mac.dmg
-            cp -r "/Volumes/Floorp/${{ env.APP_NAME }}.app" ./obj-x86_64-apple-darwin/dist/floorp/
+          ls ./obj-x86_64-apple-darwin/dist/
 
-            hdiutil detach /Volumes/Floorp/
+          hdiutil attach ./obj-x86_64-apple-darwin/dist/floorp*.mac.dmg
+          cp -r "/Volumes/Floorp/${{ env.APP_NAME }}.app" ./obj-x86_64-apple-darwin/dist/floorp/
 
-            hdiutil attach ./obj-aarch64-apple-darwin/dist/floorp*.mac.dmg
-            cp -r "/Volumes/Floorp/${{ env.APP_NAME }}.app" ./obj-aarch64-apple-darwin/dist/floorp/
+          hdiutil detach /Volumes/Floorp/
 
-            hdiutil detach /Volumes/Floorp/
+          hdiutil attach ./obj-aarch64-apple-darwin/dist/floorp*.mac.dmg
+          cp -r "/Volumes/Floorp/${{ env.APP_NAME }}.app" ./obj-aarch64-apple-darwin/dist/floorp/
 
-        - name: Integration 🗃
-          env:
-            GHA_BUILD_MACHINE: ${{ matrix.runs-on }}
-            SDKROOT: ${{ env.RUNNER_USERDIR }}/macos-sdk
-            MACOS_SDK_DIR: ${{ env.RUNNER_USERDIR }}/macos-sdk
-            MOZ_SDK_DIR: ${{ env.RUNNER_USERDIR }}/macos-sdk
-          run: |
-            if [[ -n ${{ inputs.MOZ_BUILD_DATE }} ]]; then
-              export MOZ_BUILD_DATE=${{ inputs.MOZ_BUILD_DATE }}
-            fi
+          hdiutil detach /Volumes/Floorp/
 
-            ./mach python "./toolkit/mozapps/installer/unify.py" "./obj-x86_64-apple-darwin/dist/floorp/${{ env.APP_NAME }}.app" "./obj-aarch64-apple-darwin/dist/floorp/${{ env.APP_NAME }}.app"
+      - name: Integration 🗃
+        env:
+          GHA_BUILD_MACHINE: ${{ matrix.runs-on }}
+          SDKROOT: ${{ env.RUNNER_USERDIR }}/macos-sdk
+          MACOS_SDK_DIR: ${{ env.RUNNER_USERDIR }}/macos-sdk
+          MOZ_SDK_DIR: ${{ env.RUNNER_USERDIR }}/macos-sdk
+        run: |
+          if [[ -n ${{ inputs.MOZ_BUILD_DATE }} ]]; then
+            export MOZ_BUILD_DATE=${{ inputs.MOZ_BUILD_DATE }}
+          fi
 
-        - name: Create DMG 📦
-          env:
-            GHA_BUILD_MACHINE: ${{ matrix.runs-on }}
-            SDKROOT: ${{ env.RUNNER_USERDIR }}/macos-sdk
-            MACOS_SDK_DIR: ${{ env.RUNNER_USERDIR }}/macos-sdk
-            MOZ_SDK_DIR: ${{ env.RUNNER_USERDIR }}/macos-sdk
-          run: |
-            if [[ -n ${{ inputs.MOZ_BUILD_DATE }} ]]; then
-              export MOZ_BUILD_DATE=${{ inputs.MOZ_BUILD_DATE }}
-            fi
+          ./mach python "./toolkit/mozapps/installer/unify.py" "./obj-x86_64-apple-darwin/dist/floorp/${{ env.APP_NAME }}.app" "./obj-aarch64-apple-darwin/dist/floorp/${{ env.APP_NAME }}.app"
 
-            ./mach python -m mozbuild.action.make_dmg ./obj-x86_64-apple-darwin/dist/floorp floorp-macOS-universal-moz-artifact.dmg
+      - name: Create DMG 📦
+        env:
+          GHA_BUILD_MACHINE: ${{ matrix.runs-on }}
+          SDKROOT: ${{ env.RUNNER_USERDIR }}/macos-sdk
+          MACOS_SDK_DIR: ${{ env.RUNNER_USERDIR }}/macos-sdk
+          MOZ_SDK_DIR: ${{ env.RUNNER_USERDIR }}/macos-sdk
+        run: |
+          if [[ -n ${{ inputs.MOZ_BUILD_DATE }} ]]; then
+            export MOZ_BUILD_DATE=${{ inputs.MOZ_BUILD_DATE }}
+          fi
 
-            cp ./obj-x86_64-apple-darwin/dist/floorp*update_framework_artifacts.zip ./floorp-macOS.update_framework_artifacts.zip
-            cp ./obj-x86_64-apple-darwin/dist/floorp/Floorp.app/Contents/Resources/application.ini ./nora-application.ini
+          ./mach python -m mozbuild.action.make_dmg ./obj-x86_64-apple-darwin/dist/floorp floorp-macOS-universal-moz-artifact.dmg
 
-        # Publish Start
-        - name: Remove old uploaded artifacts
-          uses: geekyeggo/delete-artifact@v5.1.0
-          with:
-            name: |
-              floorp-mac-x86_64-package
-              floorp-mac-aarch64-package
+          cp ./obj-x86_64-apple-darwin/dist/floorp*update_framework_artifacts.zip ./floorp-macOS.update_framework_artifacts.zip
+          cp ./obj-x86_64-apple-darwin/dist/floorp/Floorp.app/Contents/Resources/application.ini ./nora-application.ini
 
-        - name: Publish Package Mozilla Artifact for dev 🎁
-          uses: actions/upload-artifact@v4
-          with:
-            name: floorp-mac-universal-moz-artifact-dev
-            if-no-files-found: ignore
-            path: |
-              ./floorp-macOS-universal-moz-artifact.dmg
+      # Publish Start
+      - name: Remove old uploaded artifacts
+        uses: geekyeggo/delete-artifact@v5.1.0
+        with:
+          name: |
+            floorp-mac-x86_64-package
+            floorp-mac-aarch64-package
 
-        - name: Publish Package Mozilla Artifact for release 🎁
-          uses: actions/upload-artifact@v4
-          with:
-            name: floorp-mac-universal-moz-artifact-release
-            if-no-files-found: ignore
-            path: |
-              ./floorp-macOS-universal-moz-artifact.dmg
-              ./floorp-macOS.update_framework_artifacts.zip
+      - name: Publish Package Mozilla Artifact for dev 🎁
+        uses: actions/upload-artifact@v4
+        with:
+          name: floorp-mac-universal-moz-artifact-dev
+          if-no-files-found: ignore
+          path: |
+            ./floorp-macOS-universal-moz-artifact.dmg
 
-        - name: Publish dist/host for MAR
-          uses: actions/upload-artifact@v4
-          with:
-            name: macOS-universal-dist-host
-            path: obj-x86_64-apple-darwin/dist/host/
-            overwrite: true
+      - name: Publish Package Mozilla Artifact for release 🎁
+        uses: actions/upload-artifact@v4
+        with:
+          name: floorp-mac-universal-moz-artifact-release
+          if-no-files-found: ignore
+          path: |
+            ./floorp-macOS-universal-moz-artifact.dmg
+            ./floorp-macOS.update_framework_artifacts.zip
 
-        - name: Publish nora-application.ini for MAR
-          uses: actions/upload-artifact@v4
-          with:
-            name: macOS-universal-application-ini
-            path: ./nora-application.ini
-            overwrite: true
-        # Publish End
+      - name: Publish dist/host for MAR
+        uses: actions/upload-artifact@v4
+        with:
+          name: macOS-universal-dist-host
+          path: obj-x86_64-apple-darwin/dist/host/
+          overwrite: true
+
+      - name: Publish nora-application.ini for MAR
+        uses: actions/upload-artifact@v4
+        with:
+          name: macOS-universal-application-ini
+          path: ./nora-application.ini
+          overwrite: true
+      # Publish End
